fix flexbox on ie11

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -14,6 +14,7 @@
     display: block;
     width: auto;
     height: 3 * $base-spacing;
+    width: 3 * $base-spacing;
     -webkit-box-flex: 0;
             flex: 0 0 auto;
     margin-right: $small-spacing;
